--- a/spring4-datetime-jsr310/pom.xml
+++ b/spring4-datetime-jsr310/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-datetime-jsr310</artifactId>
+    <artifactId>spring4-datetime-jsr310</artifactId>
 
     <dependencies>
 
