--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <version>${slf4j.version}</version>
         </dependency>
         <!-- Log Framework End -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
